--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactjs-fundamental",
+  "name": "reactjs-fundamental-result",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
